v1.0.4

                Features:
                    - Added support for COMMENTS ON.
                    - Fixed handling of $$ delimiters in SQL routine bodies.
                    - Fixed handling of GENERATED STORED column changes.
                    - Added support for TABLE POLICIES.
                    - Added support for UNIQUE INDEXes.

2025-12-22      v1.0.3

                Features:
                    - SQL routines processed at the end of the list, after all others.
                    - Some minimal under the hood improvements.

2025-12-12      v1.0.2

                Features:
                    - Fixed foreign keys ordering.
                    - Fixed TLS connection error.
                    - Fixed naming with special characters.
                    - Added test cases for special characters and composite foreign keys in schema_a.sql and schema_b.sql.
                    - Fixed incorrect transformation of RETURNS TABLE.
                    - Fixed identity columns processing.
                    - Fixed sequence duplication for identity and serial columns.
                    - Fixed creation of partitioned table as a regular table instead of actual partitions.
                    - Fixed DROP scripts for table and table's parts.

2025-11-19      v1.0.1

                Features:
                    - Improved hash workflow.
                    - DROPs are working.

2025-11-07      v1.0.0

                Features:
                    - Initial version: dump, dump compare, run with config.